final config